# nvidia_blog_agent

./: .dockerignore  .gitignore  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  ENGINEERING_STATUS_REPORT.md  LOCAL_TESTING.md  MCP_SETUP_CURSOR.md  PROJECT_INVENTORY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SETUP_CLOUD_SCHEDULER.md  SETUP_ENV.md  SETUP_WALKTHROUGH.md  USAGE_EXAMPLE.md  VERTEX_RAG_SETUP.md  config.py  deploy_cloud_run.ps1  env.template  mcp.json  nvidia_blog_mcp_server.py  pyproject.toml  requirements.txt  run_mcp_server.py  setup_scheduler.ps1  smoke_test_payload.json  test_mcp_config.py  test_mcp_entrypoint.py
.cursor/rules/: system-prompt-techblog.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  (+2 more)
contracts/: __init__.py  blog_models.py
docs/: adding-historical-blogs.md  architecture.md  ci-cd.md  cloud-resources-inventory.md  deployment.md  development.md  directory-inventory.md  mcp-authentication-fix.md  mcp-setup.md  secrets-migration.md  security.md  workload-identity-federation.md  workload-identity-fix.md
eval/: __init__.py
mcp/: mcp-setup.md  nvidia_blog_mcp_server.py  run_mcp_server.py
nvidia_blog_agent/: __init__.py  caching.py  config.py  monitoring.py  rag_clients.py  retry.py  secrets.py  session_manager.py
scripts/: __init__.py  import_rag_files.py  kaggle_notebook_example.py  run_eval_vertex.py  run_ingest.py  run_qa.py  test_rss_feed.py  test_service_local.py
service/: app.py  mcp_http.py
tests/: __init__.py  conftest.py
tools/: __init__.py  scraper.py  summarization.py  vertex_rag_retrieve.py
(+40 files in other folders)
